sloppy formatting added to reduce overfill

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -1,5 +1,5 @@
 \chapter{Introduction}
-
+\sloppy
 \gls{tm} biology is a huge and varied field that is ultimately the study of the interface between compartments of the cell; one of the fundamental pillars of life as we know it~\cite{Ladokhin2015}. \gls{tmp}s include some of the most critical to life proteins as well as a large number of drug targets.
 However, the experimental inaccessibility of the \gls{tmh} has hampered the progress of study compared to their globular structural analogues. Despite progress over the last decade, the understanding of the relationship between the sequence and function of a \gls{tmh} is incomplete.
 
