--- a/chapter_tmcomposition.tex
+++ b/chapter_tmcomposition.tex
@@ -1,6 +1,6 @@
 
 \chapter{The ``Negative-Outside'' Rule}
-
+\sloppy
 The description of a \gls{tmh} remains incomplete. The understanding of \gls{tmp} topology is erroneous, and despite a wealth of structures, the general model of helix-helix and helix-lipid interactions remains speculative and requires a great deal of intensive analysis to generate a working model of a particular \gls{tmp}.
 
 The work presented in this chapter is an expanded version of published work~\cite{Baker2017}. We use advanced statistical analysis to analyze large sequence datasets that have rich topological annotation. By analyzing these sequences in the context of anchorage, we find that some \gls{tmh}s are confined to biological constraints of the membrane, whereas others that likely contain function beyond anchorage, are less conforming to the membrane. Specifically, there is further elaboration of statistical definitions in the methods than in the published paper.
@@ -309,6 +309,7 @@ The following datasets are used throughout this work:
 ExpAll. TOPDB contained 4190 manually annotated transmembrane proteins at the time of download~\cite{Dobson2015}. CD-HIT~\cite{Huang2010} identified 3857 representative sequences using sequence clusters of $>$90\% sequence identity. This choice of similarity threshold was chosen since CD-HIT ultimately underlies the clustering behind UniRef. Unlike the other datasets, which by definition contain reasonably typical \gls{tmh}s, many of the transmembrane segments annotated in TOPDB are extremely short or long and this would cause severe unrealistic hydrophobic mismatches. Especially, the short segments could be the result of miss-annotation, \gls{tmh}s broken into pieces due to kinks or segments that peripherally insert only into the interface of the membrane bilayer. To remove the atypical lengths, cut-offs were set at 16 as the lower cut-off and 38 as the upper cut-off after inspecting the length histogram. We found that, for the single-pass \gls{tmh}s in TOPDB, 1215 out of 1544 are within the length limits (78.7\%). Among the 17141 multi-pass \gls{tmh}s, we find 15563 within our global length limits (from 2205 TOPDB records corresponding to 2281 UniProt entries). This removed 1578 very short \gls{tmh}s and none of the long \gls{tmh}s. Our cut-off selection is very similar to the one by Baeza-Delgado etal.~\cite{Baeza-Delgado2013}.
 
 To get an idea of the taxonomical breakdown in the ExpAll dataset, the UniProt ID tags were extracted and mapped to UniProtKB. The combined dataset of multi-pass (single-pass) proteins was mapped to 1288 (1343) eukaryotic records, 404 (776) of which were human records, 926 (191) bacterial records, 46 (5) archaea records, and 14 (22) viral records.
+
 
 UniHuman. This is a set of mostly human \gls{tmh}-containing proteins or their close mammalian homologues. UniProtKB contains 5187 human protein records that are manually annotated with TRANSMEM regions (query = ``annotation:(type:transmem) AND reviewed:yes AND organism:``Homo sapiens (Human) [9606]'' AND proteome:up000005640''. To reduce sequence redundancy, these sequences were submitted to UniRef90~\cite{Suzek2015}. To note, Uniref90 was chosen over Uniref50 to maintain a viable size of datasets for statistical analysis of occurrence of negatively charged residue, which are very rare in the vicinity of \gls{tmh}s. 5015 UniRef90 clusters represented the 5187 sequences. A list of sequences representing those clusters was submitted back to UniProtKB resulting and 5014 representative entries were recovered. There is a small issue in that the list of representatives from UniRef includes non-canonical isoforms, while the batch retrieve query of UniProtKB only supports complete entries, i.e. canonical isoforms. This resulted in the loss of one record at this point is due to two splice isoforms acting as representative identifiers. Of those 5014 records, 4714 were records from human entries, 197 were from mice, 94 from rats, 5 from bovine, 2 from chimps, 1 from Chinese hamsters, and 1 from pigs. Although the \gls{tmh} length variations within the UniHuman dataset are much smaller than for ExpAll, we applied the same length cut-offs for the sake of comparability. Out of the 1709 single-pass cases, 1705 entered the final dataset. Of those, 1596 were from human records, 87 were from mouse, 19 were from rat, and 2 were from chimpanzee. Among the 12390 multi-pass \gls{tmh}s, 12353 were included into UniHuman. The other, multi-pass record identifiers were mapped to 1789 UniProtKB entries. 1660 of these were human entries, 63 from rat, 61 from mouse, 4 from bovine, and 1 from Chinese hamster. This clustered human dataset was then queried for subcellular locations to make the UniER, UniGolgi, and UniPM datasets (detailed below).
 
