--- a/thesis.tex
+++ b/thesis.tex
@@ -49,6 +49,7 @@
 \newacronym{kw}{KW}{Kruskal-Wallis}
 
 \begin{document}
+\sloppy
 
 \title{Investigating the Recognition and Interactions of Non-Polar \(\alpha\) Helices in Biology}
 \author{James Alexander Baker}
