Updated draft for chapter on GPCRs

--- a/thesis.tex
+++ b/thesis.tex
@@ -47,6 +47,7 @@
 \newacronym{snare}{SNARE}{Soluble N-Ethylmaleimide-Sensitive Factor Attachment Receptor}
 \newacronym{ks}{KS}{Kolmogorov-Smirnov}
 \newacronym{kw}{KW}{Kruskal-Wallis}
+\newacronym{gpcr}{GPCR}{G protein-–coupled receptor}
 
 \begin{document}
 \sloppy
@@ -134,8 +135,8 @@ I would like to thank all members of both the Eisenhaber research group, as well
 %This is where we call the chapters. No need to include ".tex". The chapters will be printed to the document in this order. To create a new chapter, make a new file, and add the name of the file below (without the file extension).
 \input{chapter_introduction}
 \input{chapter_tmcomposition}
+\input{chapter_multipassfolding}
 \input{chapter_tailanchor}
-\input{chapter_predictfunction}
 \input{chapter_conclusions}
 
 % In order for this to work a special build sequence is needed. http://tex.stackexchange.com/a/46732/42423
