--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -35,6 +35,8 @@ Voltage gated (controlled vocabulary if no list available) distributions
 
 
 \section{Discussion}
+GPCRs have long be known to be overrepresented among genomes \cite{Remm2000}.
+
 Seen across a variety of 7TM families with varying functions with datasets built from all membrane types (hence variety).
 Suggests a pressure for simpler TMHs to precede more complex ones, repeating every 3-4 TMHs.
 The universality points toward translocon behaviour pressure, or thermodynamic stability in the membrane.
