new references on membrane proteins as drug targets

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,45 @@
+@article{Wang2013,
+abstract = {The druggable subset of the human genome, termed the "druggable genome," provides the pharmaceutical industry with a unique opportunity for the advancement of new therapeutic interventions for a multitude of diseases and disorders. To date, there is no systematic assessment of the evolutionary history and nature of the defined druggable proteins derived from the contemporary druggable genome (i.e., proteins that bind or are predicted to bind with high affinity to a biologic). An understanding of drug-protein target interactions in specific cellular compartments is crucial for the optimal therapeutic delivery of pharmaceutical agents, as well as for preclinical drug trials in model animals. This study applied the concept of pharmacophylogenomics, the study of genes, evolution, and drug targets, to conduct an evolutionary survey of drug targets with respect to their subcellular localizations. Using multiple models and modes of druggable genome comparison, the results concordantly indicated that orthologous drug targets with a nuclear localization in the human, macaque, mouse, and rat showed a higher trend for evolutionary conservation compared with drug targets in the cell membrane and the extracellular compartment. As such, this study provides important information regarding druggable protein targets and the druggable genome at the pharmacophylogenomics level.},
+author = {Wang, Xiaotong and Wang, Rui and Zhang, Yanfeng and Zhang, Hao},
+doi = {10.1093/gbe/evt092},
+file = {:Users/James/Documents/Mendeley Desktop/Wang et al. - 2013 - Evolutionary survey of druggable protein targets with respect to their subcellular localizations. - Genome biology.pdf:pdf},
+isbn = {1759-6653},
+issn = {17596653},
+journal = {Genome Biology and Evolution},
+keywords = {Drug targets,Druggable genome,Ka/Ks ratio,Pharmacophylogenomics,Subcellular localization},
+number = {7},
+pages = {1291--1297},
+pmid = {23749117},
+publisher = {Oxford University Press},
+title = {{Evolutionary survey of druggable protein targets with respect to their subcellular localizations}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/23749117 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3730344},
+volume = {5},
+year = {2013}
+}
+@article{Hopkins2002,
+abstract = {An assessment of the number of molecular targets that represent an opportunity for therapeutic intervention is crucial to the development of post-genomic research strategies within the pharmaceutical industry. Now that we know the size of the human genome, it is interesting to consider just how many molecular targets this opportunity represents. We start from the position that we understand the properties that are required for a good drug, and therefore must be able to understand what makes a good drug target.},
+archivePrefix = {arXiv},
+arxivId = {Hopkins2002},
+author = {Hopkins, Andrew L. and Groom, Colin R.},
+doi = {10.1038/nrd892},
+eprint = {Hopkins2002},
+file = {:Users/James/Documents/Mendeley Desktop/Hopkins, Groom - 2002 - The druggable genome - Nature Reviews Drug Discovery.pdf:pdf},
+isbn = {1474-1776},
+issn = {1474-1776},
+journal = {Nature Reviews Drug Discovery},
+month = {sep},
+number = {9},
+pages = {727--730},
+pmid = {12209152},
+publisher = {Nature Publishing Group},
+title = {{The druggable genome}},
+url = {http://www.nature.com/doifinder/10.1038/nrd892},
+volume = {1},
+year = {2002}
+}
+
+
+
 @article{Forrest2015,
 abstract = {Symmetry is a common feature among natural systems, including protein structures. A strong propensity toward symmetric architectures has long been recognized for water-soluble proteins, and this propensity has been rationalized from an evolutionary standpoint. Proteins residing in cellular membranes, however, have traditionally been less amenable to structural studies, and thus the prevalence and significance of symmetry in this important class of molecules is not as well understood. In the past two decades, researchers have made great strides in this area, and these advances have provided exciting insights into the range of architectures adopted by membrane proteins. These structural studies have revealed a similarly strong bias toward symmetric arrangements, which were often unexpected and which occurred despite the restrictions imposed by the membrane environment on the possible symmetry groups. Moreover, membrane proteins disproportionately contain internal structural repeats resulting from duplicatio...},
 author = {Forrest, Lucy R.},
