tweaks and reference on tryptophan energies added

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -35,7 +35,7 @@ Although the regions labelled here generally hold true in terms of the statistic
 
 % Figure: A cartoon depicting various problematic, yet biologically observed topologies and lengths that the alpha helices can adopt.
 From left to right: a typical and traditional \gls{tmh}, an exceptionally long \gls{tmh}, a \gls{tmh} that lies flat in the interface region, a kinked helix that enters and exits the bilayer on the same leaflet, a \gls{tmh} that is not long enough to span the entire membrane.
-Note that these exceptional formations present a challenge for topology predictions of the loop regions.
+These exceptional formations present a challenge for topology predictions of the loop regions.
 
 The language used to describe \gls{tmh}s varies somewhat across the literature, primarily due to a changing understanding of \gls{tmh} general structure and relevance to function over the last 15 years or so.
 There is a general composition of a \gls{tmh} despite specific protein and membrane constraints~\cite{Sharpe2010}.
@@ -47,7 +47,7 @@ As expected, half of the natural amino acids are equally distributed along ransm
 It has been noted that transitions between the polar and non-polar groups at the ends of the hydrophobic core occur in a more defined edge on the cytoplasmic side than at the extracytoplasmic face when counting from the middle of the helix outwards~\cite{Baeza-Delgado2013}.
 This is probably reflecting the different lipid composition of both leaflets of biological membranes~\cite{Baeza-Delgado2013}.
 
-A previous study by Sharpe \textit{ et al.} from 2010 used 1192 human and 1119 yeast predicted \gls{tmh}s that were not structurally validated to further explore the difference in \gls{tmh} and leaflet structure by exploiting the evolutionarily conserved sequence differences between the \gls{tmh} in the inner and outer leaflets~\cite{Sharpe2010}.
+A previous study by Sharpe \textit{et al.} from 2010 used 1192 human and 1119 yeast predicted \gls{tmh}s that were not structurally validated to further explore the difference in \gls{tmh} and leaflet structure by exploiting the evolutionarily conserved sequence differences between the \gls{tmh} in the inner and outer leaflets~\cite{Sharpe2010}.
 \gls{tmh}s from vertebrates and invertebrates were found to be reasonably similar compositionally.
 The differences in consensus \gls{tmh} structure implies that there are general differences between the membranes of the Golgi and \gls{er}.
 The abundance of serines in the region following the lumenal end of Golgi \gls{tms}s probably reflects the fact that this part of many Golgi enzymes forms a flexible linker that tethers the catalytic domain to the membrane~\cite{Sharpe2010}.
@@ -65,6 +65,8 @@ More recently still large-scale sequence analysis of \gls{tmh}s from different o
 Not all aromatic residues are not found in the aromatic belt; phenylalanine has no particular preference for this region~\cite{Granseth2005, Braun1999}.
 However, it still remains unclear if this is to do with anchorage or translocon recognition~\cite{Baeza-Delgado2013}.
 
+A study of conserved tryptophan residues during folding of integrin $\alpha$II$\beta$3 \gls{tm} complex demonstrated the anchoring effects of tryptophan (0.4 kcal/mol contribution to membrane stability) in \gls{tmh}s is greater than the other residues~\cite{Situ2018}. It was suggested that it's wide amphiphilic range (it's stabilising energetic contribution in either hydrophobic or polar sites) complements the heterogeneity and asymmetry of mammalian membrane lipids in particular.
+
 %More than one explanation has been proposed for the physical and/or chemical basis for the strong preference of aromatic residues to reside in the membrane-water interface region.
 The Tyrosine side chain is a six-membered aromatic ring with an –OH group attached.
 Tryptophan has two aromatic rings that are fused into one large hydrophobic ring-structure.
@@ -72,8 +74,8 @@ Phenylalanine, although aromatic, is completely hydrophobic, and is found in the
 The classical explanation for the preference of Tyrosine and Tryptophan to reside in the interfacial regions is their dipolar character.
 The side chain must simply seek a compromise.
 This can be achieved by burying the aromatic ring close to, or within, the hydrophobic core, while the hydrophilic part can interact with the polar lipid head-groups at the interface.
-Other factors such as the aromaticity, size, rigidity and shape of Tryptophan, rather than its dipolar character, has also been suggested as the primary reasons for its interfacial preference [91].
-Perhaps, as suggested by You et al., it is a balance of all these forces that explains the interfacial preference of Tyrosine and Tryptophan [91
+Other factors such as the aromaticity, size, rigidity and shape of Tryptophan, rather than its dipolar character, has also been suggested as the primary reasons for its interfacial preference.
+%Perhaps, as suggested by You \textit{et al.}, it is a balance of all these forces that explains the interfacial preference of Tyrosine and Tryptophan. %This NEEDS referencing!
 
 \subsubsection{Snorkeling}
 
