--- a/chapter_tmcomposition.tex
+++ b/chapter_tmcomposition.tex
@@ -178,7 +178,7 @@ There are only 582 glutamates (1.22\%) and 520 aspartates (1.09\%) among the 475
 Within the \gls{tmh} itself, there are 64 glutamates (0.19\%) and 69 aspartates (0.21\%).
 In both cases, the negatively charged residues represent the ultimate end of the distribution.
 To note, acidic residues are rare even compared to positively charged residues which are about 3--4 times more frequent.
-On a much smaller dataset of single-spanning \gls{tmp}, Nakashima et al.
+On a much smaller dataset of single-spanning \gls{tmp}, Nakashima \textit{et al.}
 (51) made similar compositional studies.
 To compare, they found 0.94\% glutamate and 0.94\% aspartate within just the \gls{tmh} region (values very similar to ours from \gls{tmh}s with small flanks; apparently, they used more outwardly defined \gls{tmh} boundaries) but the content of each glutamate and aspartate within the extracellular or cytoplasmic domains is larger by an order of magnitude, between 5.26\% and 9.34\%.
 These latter values tend to be even higher than the average glutamate and aspartate composition throughout the protein database (5--6\%~\cite{Nakashima1992}).
@@ -197,7 +197,7 @@ Notably, the difference between single- and multi-pass \gls{tmh}s is greatest in
 \subsection{Amino acid residue distribution analysis reveals a ``negative-not-inside/negative-outside'' signal in single-pass \gls{tmh} segments}
 
 The rarity of negatively charged residues is a complicating issue when studying their distribution along the sequence positions of \gls{tmh}s and their flanks.
-For UniHuman and ExpAll , we plotted absolute abundance of aspartic acid, glutamic acid, lysine, arginine, and leucine at each position (\textit{i.e.}, it scales as the equivalent fraction in the total composition of the alignment column) (Figure~\ref{fig:single_pass_charge_distribution}).
+For UniHuman and ExpAll , we plotted absolute abundance of aspartic acid, glutamic acid, lysine, arginine, and leucine at each position (i.e., it scales as the equivalent fraction in the total composition of the alignment column) (Figure~\ref{fig:single_pass_charge_distribution}).
 To note, the known preference of positively charged residues towards the cytoplasmic side is nevertheless evident.
 Yet, it becomes apparent that any bias in the occurrence of the much rarer acidic residues is overshadowed by fluctuations in the highly abundant residues such as leucine.
 
@@ -904,7 +904,7 @@ Our second normalization method is independent of the abundance of any amino aci
    q_{i,r}=\frac{{100}\cdot{a_{i,r}}}{a_i}
  \end{equation}
 
-The value  is the total abundance of residues of just amino acid type  in a given alignment of \gls{tmh}-containing segments (\textit{i.e.}, in the \gls{tmh} together with its two adjoining flanks summed over all cases of \gls{tmh}s in the given dataset).
+The value  is the total abundance of residues of just amino acid type  in a given alignment of \gls{tmh}-containing segments (i.e., in the \gls{tmh} together with its two adjoining flanks summed over all cases of \gls{tmh}s in the given dataset).
 Peaks in as function of r reveal the prefered positions of residues of type i.
 The difference in   and   normalisation is visualised in Figure~\ref{fig:normalisation}.
 
