--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,17 @@
+@article{Situ2018,
+abstract = {The function of membrane proteins relies on a defined orientation of protein relative to lipid. In apparent correlation to protein anchoring, tryptophan residues are enriched in the lipid headgroup region. To characterize the thermodynamic and structural basis of this relationship in $\alpha$-helical membrane proteins, we examined the role of three conserved tryptophans in the folding of the heterodimeric integrin $\alpha$IIb$\beta$3 transmembrane (TM) complex in phospholipid bicelles and mammalian membranes. In the homogenous lipid environment of bicelles, tryptophan was replaceable by residues of distinct polarities. The appropriate polarity was guided by the electrostatic potential of the tryptophan surrounding, suggesting that tryptophan can complement diverse environments by adjusting the orientation of its anisotropic side chain to achieve site-specific anchoring. As a sole membrane anchor, tryptophan made a contribution of 0.4 kcal/mol to TM complex stability in bicelles. In membranes, it proved more difficult to replace tryptophan even by tyrosine, indicating a superior capacity to interact with heterogeneous lipids of biological membranes. Interestingly, at intracellular TM helix ends, where integrin activation is initiated, sequence motifs that interact with lipids via opposing polarity patterns were found to restrict TM helix orientations beyond tryptophan anchoring. In contrast to bicelles, phenylalanine became the least accepted substitute in membranes, demonstrating an increased role of the hydrophobic effect. Altogether, our study implicates a wide amphiphilic range of tryptophan, membrane complexity, and the hydrophobic effect to be important factors in tryptophan membrane anchoring.},
+author = {Situ, Alan J. and Kang, So-Min and Frey, Benjamin B. and An, Woojin and Kim, Chungho and Ulmer, Tobias S.},
+doi = {10.1021/acs.jpcb.7b11227},
+file = {:C$\backslash$:/Users/baker/Downloads/10.1021@acs.jpcb.7b11227.pdf:pdf},
+issn = {1520-6106},
+journal = {The Journal of Physical Chemistry B},
+month = {jan},
+pages = {acs.jpcb.7b11227},
+publisher = {American Chemical Society},
+title = {{Membrane Anchoring of $\alpha$-Helical Proteins: Role of Tryptophan}},
+url = {http://pubs.acs.org/doi/10.1021/acs.jpcb.7b11227},
+year = {2018}
+}
 @article{Wang2013,
 abstract = {The druggable subset of the human genome, termed the "druggable genome," provides the pharmaceutical industry with a unique opportunity for the advancement of new therapeutic interventions for a multitude of diseases and disorders. To date, there is no systematic assessment of the evolutionary history and nature of the defined druggable proteins derived from the contemporary druggable genome (i.e., proteins that bind or are predicted to bind with high affinity to a biologic). An understanding of drug-protein target interactions in specific cellular compartments is crucial for the optimal therapeutic delivery of pharmaceutical agents, as well as for preclinical drug trials in model animals. This study applied the concept of pharmacophylogenomics, the study of genes, evolution, and drug targets, to conduct an evolutionary survey of drug targets with respect to their subcellular localizations. Using multiple models and modes of druggable genome comparison, the results concordantly indicated that orthologous drug targets with a nuclear localization in the human, macaque, mouse, and rat showed a higher trend for evolutionary conservation compared with drug targets in the cell membrane and the extracellular compartment. As such, this study provides important information regarding druggable protein targets and the druggable genome at the pharmacophylogenomics level.},
 author = {Wang, Xiaotong and Wang, Rui and Zhang, Yanfeng and Zhang, Hao},
