Updated entropy sectiopn, but formula are not 100 percent accurate yet and this needs revisiting.

--- a/references.bib
+++ b/references.bib
@@ -7221,6 +7221,8 @@ url = {https://doi.org/10.1038/341456a0 http://www.nature.com/doifinder/10.1038/
 volume = {341},
 year = {1989}
 }
+
+
 @article{White1999,
 author = {White, Stephen H and Wimley, William C},
 doi = {10.1146/annurev.biophys.28.1.319},
@@ -7643,6 +7645,27 @@ url = {http://linkinghub.elsevier.com/retrieve/pii/S0092867410006124 https://doi
 volume = {142},
 year = {2010}
 }
+@article{Shannon1948,
+abstract = {The recent development of various methods of modulation such as PCM and PPM which exchange band-width for signal-to-noise ratio has intensified the interest in a general theory of communication.$\backslash$n},
+archivePrefix = {arXiv},
+arxivId = {chao-dyn/9411012},
+author = {Shannon, Claude Edmund},
+doi = {10.1002/j.1538-7305.1948.tb01338.x},
+eprint = {9411012},
+file = {:C$\backslash$:/Users/baker/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Shannon - 1948 - A Mathematical Theory of Communication.pdf:pdf},
+isbn = {0252725484},
+issn = {15591662},
+journal = {Bell System Technical Journal},
+number = {3},
+pages = {3},
+pmid = {9230594},
+primaryClass = {chao-dyn},
+title = {{A Mathematical Theory of Communication}},
+url = {http://portal.acm.org/citation.cfm?doid=584091.584093{\%}5Cnhttp://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=6773024},
+volume = {5},
+year = {1948}
+}
+
 @article{Wong2012,
 abstract = {Transmembrane helical segments (TMs) can be classified into two groups of so-called 'simple' and 'complex' TMs. Whereas the first group represents mere hydrophobic anchors with an overrepresentation of aliphatic hydrophobic residues that are likely attributed to convergent evolution in many cases, the complex ones embody ancestral information and tend to have structural and functional roles beyond just membrane immersion. Hence, the sequence homology concept is not applicable on simple TMs. In practice, these simple TMs can attract statistically significant but evolutionarily unrelated hits during similarity searches (whether through BLAST- or HMM-based approaches). This is especially problematic for membrane proteins that contain both globular segments and TMs. As such, we have developed the transmembrane helix: simple or complex (TMSOC) webserver for the identification of simple and complex TMs. By masking simple TM segments in seed sequences prior to sequence similarity searches, the false-discovery rate decreases without sacrificing sensitivity. Therefore, TMSOC is a novel and necessary sequence analytic tool for both the experimentalists and the computational biology community working on membrane proteins. It is freely accessible at http://tmsoc.bii.a-star.edu.sg or available for download.},
 author = {Wong, Wing-Cheong C and Maurer-Stroh, Sebastian and Schneider, Georg and Eisenhaber, Frank},
