--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -140,12 +140,28 @@ The automatic TRANSMEM annotation currently used in Uniprot is according to TMHM
 Sequence properties that can be analysed by bioinformatics, the sequence complexity and hydrophobicity, of the \gls{tmh} have been used to predict the role of the \gls{tmh} as either functional or structural, and as a discrete cluster from other SCOP annotated helices~\cite{Wong2012}.
 Those findings demonstrated that the sequence of the \gls{tmh} holds valuable information regarding biological roles, and forms the basis of our interest in the link between the polarity of a helix and functional activity beyond structural anchorage.
 
-Sequence complexity otherwise referred to as sequence entropy, is essentially an estimate of the linguistic entropy of a string.
+TMSOC's z-score is able to distinguish between functionally active~\gls{tmh}s and those only associated with anchorage~\cite{Wong2012}.
+The z-score is a product of both hydrophobicity and a Shannon like sequence entropy of the character string in the~\gls{tmh}. This term is described below in equation~\ref{zscoreterm}.
+
+\begin{equation} \label{zscoreterm}
+z({x}_{\Phi},{x}_{c})={(-1)}^{s}\left[\frac{{({x}_{\Phi}-{\mu}_{\Phi})}^{2}}{{\sigma}_{\phi}^{2}}+\frac{{({x}_{c}-{\mu}_{c})}^{2}}{{\sigma}_{c}^{2}}\right]
+\end{equation}
+
+Where $x_c$ and $x_\Phi$ are moving window averages of c, the sequence entropy~\cite{Wootton1996}. $\Phi$ is the White and Wimley hydrophobicity~\cite{White1999} for a given segment and $\mu$ and $\sigma$ are the mean and standard deviation of the sequence entropy and hydrophobicity of the functional~\gls{tmh} set, that is those~\gls{tmh}s containing active residues.
+
+Sequence entropy, is essentially an estimate of the linguistic entropy of a string.
 In the context of biology can be thought of as an estimation of the non-randomness of a sequence.
 Sequence complexity can be used to analyse DNA sequences~\cite{Pinho2013, Oliver1993, Troyanskaya2002}, however here we will focus on the analysis of the complexity of a sequence in protein sequences.
 
-The compositional complexity is measured over sequence windows.
-If we have an amino acid composition $\{{{n}_{i}}{\}}_{i}={\min{i}},\ldots,{\max{i}}$ with a window length of $L=\Sigma {n}_i $, the total number of sequences can be calculated by dividing a factorial of the length by the product of the compositions, i.e\  $ N = L!/\Pi{n}_i $ possible sequences.
+Broadly speaking, the information theory entropy of a linguistic string can be defined as in equation~\ref{simpleentropy}.
+
+\begin{equation} \label{simpleentropy}
+	H(S)=-{\sum_{i=1}^n {p_i\log_s(p_i)}}
+\end{equation}
+
+Where H is the entropy of a sequence (S), and $p_i$ is the probability of a character $i$ through each position (n) in S. This allows us to quantify the average relative information density held within a string of information~\cite{Shannon1948}.
+
+The compositional complexity is measured over sequence windows. If we have an amino acid composition $\{{{n}_{i}}{\}}_{i}={\min{i}},\ldots,{\max{i}}$ with a window length of $L=\Sigma {n}_i $, the total number of sequences can be calculated by dividing a factorial of the length by the product of the compositions, i.e\  $ N = L!/\Pi{n}_i $ possible sequences.
 The SEG algorithm~\cite{WOOTTON1994269, Wootton1996} identifies subsegments of the raw region which have the lowest probability.
 The algorithm searches for and concatenates sub-threshold segments for the Shannon entropy-like term in equation~\ref{shannonentropyliketerm}
 
