updated a few typos

--- a/chapter_tmcomposition.tex
+++ b/chapter_tmcomposition.tex
@@ -567,7 +567,7 @@ Multi-pass \gls{tmh}s (without overlapping flanks) do not show statistically sig
 Significance appears as soon as subsets of \gls{tmh}s with flanks at both sides are studied.
 Not surprisingly, there is no charge bias if there are no flanks in the first place.
 It is perhaps worth noting that the results from multi-pass \gls{tmh}s with overlapping flanks may involve amplification of skews since it involves multiple counting of the same residues.
-Given the redundancy threshold of UniRef90, we cannot rule out that these statistical skews are the result of a trend from only a small sub-group of TMPs which is being amplified.
+Given the redundancy threshold of UniRef90, we cannot rule out that these statistical skews are the result of a trend from only a small sub-group of~\gls{tmp}s which is being amplified.
 Hence, we also needed to observe if these same observed biases were true in condition (ii), which is indeed the case.
 
 As the ``negative-outside/negative-not-inside'' skew is widely observed among varying taxa and subcellular localisations with statistical significance, it appears to, at least to a certain extent, be caused by physical reasons and be associated with the background membrane potential.
@@ -585,7 +585,7 @@ As the mutation studies have shown negative charge as a topological determinant~
 
 Whereas the ``negative-outside/negative-not-inside'' skew is observed for distantly related eukaryotic species and it is also present in Gram-negative bacteria such as \textit{E.
 coli}, this sequence pattern was not observed for the Gram-positive bacteria in which there is no observable bias.
-In contrast, Archaea have a statistically significant ``negative-inside'' propensity both for single- and multi-pass TM proteins.
+In contrast, Archaea have a statistically significant ``negative-inside'' propensity both for single- and multi-pass~\gls{tmp}s.
 It is known that Archaea have remarkably different membranes compared to other kingdoms of life due to their extremophile adaptations to stress~\cite{Oger2013}.
 Whilst it is unclear why negative charge is distributed so differently in UniArch to the other taxonomic datasets, one must appreciate that a much more nuanced approach would be needed to draw formal conclusions about Archaea, which current databases cannot provide due to the relatively limited information and annotation of Archaean proteomes.
 
@@ -605,7 +605,7 @@ We have shown that normalising by the total amount of residues of the amino acid
 It was common practice to align \gls{tmh} according to the most cytosolic residue~\cite{Sharpe2010} although it is known that the membrane/cytosol boundary of the \gls{tmh} is not well defined (and the exact boundary is even less well understood at the non-cytosolic side).
 Aligning the TM regions and their flanks from the center of the \gls{tmh} was first proposed by Baeza-Delgado \textit{et al.}~\cite{Baeza-Delgado2013}.
 Since we know now that acidic residues are often suppressed in the cytosolic flank and within the \gls{tmh}, this implies that the few acidic residues found in the cytosolic interface would appear more comparable to those in the poorly defined non-cytosolic interface as the respective residues are spread over more potential positions, diminishing any observable bias.
-  \item We find that separation into single- and multi-pass TM datasets (or, even better, simple and complex \gls{tmh}s~\cite{Wong2011, Wong2012}) is critical to study the inside/outside bias.
+  \item We find that separation into single- and multi-pass~\gls{tm} datasets (or, even better, simple and complex \gls{tmh}s~\cite{Wong2011, Wong2012}) is critical to study the inside/outside bias.
 As many \gls{tmh}s in multi-pass \gls{tmp}s have essentially no flanks or very short flanks if the condition of non-overlap is applied to flanks of neighbouring \gls{tmh}s, this might also obscure the observation of the negative charge bias.
 If there are no flanks, then there will be no residue distribution bias in these flanks.
 The problem can be alleviated by either studying only subsets with minimal flank lengths on both sides (although datasets might become too small for statistical analysis) or by allowing flank overlaps between neighbouring \gls{tmh}s.
@@ -617,7 +617,7 @@ These \gls{tmh}s are pressured to exhibit residue biases that may aid anchorage 
 Complex \gls{tmh}s, typically within multi-pass membrane proteins that have a function beyond anchorage, comply with a multitude of restraints structural and functional constraints and the negative charge skew is just one of them.
 \end{enumerate}
 
-The most representative precedent papers are those of Sharpe \textit{et al.}~\cite{Sharpe2010} from 2010 (with 1192 human and 1119 yeast single-pass \gls{tmh}s), Baeza-Delgado \textit{et al.}~\cite{Baeza-Delgado2013} (with 792 \gls{tmh}s mixed from single- and multi-pass gls{tmp}s) and Pogozheva \textit{et al.}~\cite{Pogozheva2013} (\gls{tmh}s from 191 mixed from single- and multi-pass \gls{tmp}s with structural information) both from 2013.
+The most representative precedent papers are those of Sharpe \textit{et al.}~\cite{Sharpe2010} from 2010 (with 1192 human and 1119 yeast single-pass \gls{tmh}s), Baeza-Delgado \textit{et al.}~\cite{Baeza-Delgado2013} (with 792 \gls{tmh}s mixed from single- and multi-pass~\gls{tmp}s) and Pogozheva \textit{et al.}~\cite{Pogozheva2013} (\gls{tmh}s from 191 mixed from single- and multi-pass \gls{tmp}s with structural information) both from 2013.
 Whereas the first analysis would have benefitted from the central alignment approach and the first two studies from another normalization as described above, the third study did come close to our findings.
 To note, their dataset mixed with single- and multi-pass proteins was too small for revealing the negative charge bias with significance; yet, they observed total charge differences at either sides of the membrane varying for both single- and multi-pass proteins.
 Membrane asymmetry due to positively charged residues occurring more frequently on the cytosolic side causes net charge unevenness at both sides of the membrane.
