strated writing about the translocon

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -306,7 +306,18 @@ No notable membrane potential has been identified in the Golgi~\cite{Schapiro200
 
 \section{Biogenesis of Trans-membrane Proteins}
 %Depth of secretion pathway (talk about translocons in depth here) & outline post-translational insertion
-\subsection{Translocation}
+\subsection{Translocation Overview}
+There are, broadly speaking, 3 types of translocation; BiP-mediated eukaryotic post-translational translocation, bacterial post-translational insertion using the Tat system for folded proteins and the Sec system for unfolded proteins, and co-translational insertion in bacteria through the~\gls{htl} protein complex or its individual components.
+
+Translocation is when a ribosome translates the~\gls{rna} to a nascent peptide chain which is handed directly or indirectly to insertion machinery which threads the chain through and, in the case of~\gls{tmh}s, releases the~\gls{tmh} into the membrane environment.
+
+\subsection{Post-Translational Translocation in Eukaryotes}
+
+\subsection{Post-Translational Translocation in Prokaryotes}
+
+\subsection{Co-Translational Translocation in Prokaryotes}
+
+
 
 
 \subsubsection{Tail-Anchored Proteins Post-Translationally Insert}
