--- a/thesis.tex
+++ b/thesis.tex
@@ -52,6 +52,9 @@
 \newacronym{ks}{KS}{Kolmogorov-Smirnov}
 \newacronym{kw}{KW}{Kruskal-Wallis}
 \newacronym{gpcr}{GPCR}{G protein-–coupled receptor}
+\newacronym{htl}{HTL}{holotranslocon}
+\newacronym{rna}{RNA}{ribonucleic acid}
+
 
 \begin{document}
 \sloppy
