added tail anchor intro from report

--- a/chapter_tailanchor.tex
+++ b/chapter_tailanchor.tex
@@ -71,5 +71,10 @@ The remaining dataset contained XXX proteins.
 \subsection{An Up To Date Tail-Anchor Dataset}
 
 \subsection{Potential Tail-Anchored SNARE Protein Discovery}
+Previously, two datasets of experimentally validated tail anchors and SNAREs were gathered from the literature and databases.
+SNARE proteins were noted to have more of the most hydrophobic amino acids than the general population of tail anchors~\cite{Kalbfleisch2007}.
+We exploit the difference by mapping the hydrophobicity of the transmembrane domains from a novel list of potential tail anchored proteins generated in this study onto the experimentally validated tail anchored hydrophobicity plot compiled by Kalbfleisch et al. published in Traffic 2007 (8: 1687-1694) (Figure 3).
+This method has revealed potential tail anchored SNAREs with SNARE motif domains that may not appear in conventional screening.
 
 \subsection{Biology of Spontaneously Inserting Tail Anchored Proteins}
+In addition, predicted insertion machinery dependent TAs with TMHs that are more polar on average than spontaneously inserting tail anchored protein cytochrome b5 have been highlighted.
